# simulty

./: CMakeLists.txt  Doxyfile  INSTALL.txt  mingw.sh
dev/: designdoc_1.xcf  loho.xcf
img/: cursor.pcx  guibg.pcx  line_right_terrain.pcx  line_up_terrain.pcx  menu_icon_com.pcx  menu_icon_dezone.pcx  menu_icon_fire.pcx  menu_icon_hospital.pcx  menu_icon_ind.pcx  menu_icon_land.pcx  menu_icon_police.pcx  menu_icon_res.pcx  menu_icon_road.pcx  menubg.pcx  mouse_block.pcx  road_corner_sw_1.pcx  road_corner_wn_1.pcx  road_intersection_nes_1.pcx  road_intersection_nesw_1.pcx  road_intersection_swn_1.pcx  terrain_owned_1.pcx  terrain_zone_ind.pcx  terrain_zone_res.pcx
img/icons/: menu_icon_powerplant.pcx  menu_icon_road.pcx
img/powerlines/: powerline_straight_ns_1.pcx
img/roads/: road_corner_sw_1.pcx  road_intersection_nes_1.pcx  road_intersection_wne_1.pcx  road_straight_ns_1.pcx
img/special/: police.pcx  powerplant.xcf
img/terrain/: terrain_grass_1.pcx  terrain_zone_com.pcx
lib/NL/: AbstractSocket.cpp  AbstractSocket.hpp  Exception.cpp  NL.hpp  NLNetwork.hpp  Network.cpp  Packet.hpp  Shared.hpp  Socket.hpp
lib/error/: CMakeLists.txt
src/: Budget.cpp  Budget.hpp  Building.cpp  Building.hpp  BuildingCommersial.cpp  BuildingCommersial.hpp  BuildingFactory.cpp  BuildingFactory.hpp  BuildingFire.cpp  BuildingFire.hpp  BuildingHospital.cpp  BuildingHospital.hpp  BuildingIndustrial.cpp  BuildingIndustrial.hpp  BuildingManager.cpp  BuildingManager.hpp  BuildingManagerServer.cpp  BuildingManagerServer.hpp  BuildingPolice.cpp  BuildingPolice.hpp  BuildingRender.cpp  BuildingRender.hpp  BuildingResidential.cpp  BuildingResidential.hpp  BuildingZone.cpp  BuildingZone.hpp  CMakeLists.txt  Calendar.hpp  Camera.cpp  Camera.hpp  Client.cpp  Client.hpp  Date.cpp  Date.hpp  GUI.cpp  GUI.hpp  GUIMap.cpp  GUIMap.hpp  ImageButton.hpp  ImageLoader.hpp  (+70 more)
src/NL/: NLException.cpp  NLNetwork.cpp  NLNetwork.hpp  NLPacket.cpp  NLPacket.hpp  NLSocket.cpp
src/client/: Camera.hpp  Client.hpp  GUI.hpp  PlayerClientLocal.cpp  PlayerClientLocal.hpp  PlayerClientRemote.hpp  SDLGUI.cpp  SDLGUI.hpp  ToolRender.cpp  ToolRender.hpp  player_client_remote.cpp
src/client/allegro/: ImageLoaderException.hpp
src/client/allegro/widgets/: EconomyWindow.hpp  MiniMap.cpp
src/client/sdl/: MapRender.cpp  SDLGUI.hpp
src/client/sdl/widgets/: MiniMap.hpp
src/client/widgets/: Console.hpp  MainMenu.cpp  StatusBar.hpp  Toolbar.cpp  Toolbar.hpp
src/common/: BuildingFactory.cpp  BuildingFire.cpp  BuildingFire.hpp  BuildingHospital.cpp  BuildingLoader.cpp  BuildingLoader.hpp  BuildingManager.cpp  BuildingManager.hpp  BuildingPowerplant.cpp  BuildingPowerplant.hpp  BuildingSpecial.cpp  PacketReceiver.cpp  PacketReceiver.hpp  Point.cpp  Point.hpp  Runnable.cpp  Runnable.hpp  SimultyException.hpp  building_powerplant.cpp  building_powerplant.h  shared.h
src/error/: elog.cpp
src/guis/allegro/: AllegroGUI.cpp  AllegroGUI.hpp  AllegroGUIShared.hpp  BuildingRender.cpp  BuildingRender.hpp  Camera.cpp  Camera.hpp  GUI.cpp  ImageLoader.hpp  MapRender.cpp  MapRender.hpp  MiniMap.cpp  MiniMap.hpp  Mouse.cpp  Mouse.hpp
src/guis/allegro/widgets/: EconomyWindow.cpp  EconomyWindow.hpp  ImageButton.hpp  MiniMap.cpp  MiniMap.hpp  Toolbar.cpp  Toolbar.hpp  allegrotruetypefont.cpp  allegrotruetypefont.hpp
src/guis/sdl/: BuildingRender.cpp  BuildingRender.hpp  Camera.cpp  ImageUtils.hpp  MapRender.cpp  SDLGUI.cpp  SDLGUI.hpp  ToolRender.hpp
src/guis/sdl/widgets/: Console.cpp  Console.hpp  StatusBar.hpp  sdltruetypefont.hpp
src/netlib/: CMakeLists.txt  NLException.cpp  NLException.hpp  NLNetwork.cpp  NLPacket.cpp  NLPacket.hpp  NLSocket.cpp  NLSocket.hpp  exeption.cpp  exeption.h  functions.cpp  functions.h  netlib.h  network.cpp  network.h  network_m.h  packet.cpp  packet.h  socket.cpp  socket.h
src/server/: BuildingManagerServer.cpp  PlayerServerNetwork.cpp  Server.cpp  Server.hpp  ServerListener.cpp  ServerListener.hpp
trunk/: CMakeLists.txt  Doxyfile  INSTALL.txt
trunk/dev/: buildings.xcf  logo.xcf  simulity.dia  sketch.xcf
trunk/img/: guibg.pcx  line_down_terrain.pcx  (+4 more)
trunk/src/: BuildingCommersial.hpp  BuildingFactory.cpp  BuildingFactory.hpp  BuildingManager.hpp  BuildingPolice.hpp  BuildingResidential.hpp  CMakeLists.txt  Map.cpp  PlayerManager.hpp  Server.hpp  Tile.hpp  building_school.cpp
trunk/src/client/: BuildingRender.cpp  BuildingRender.hpp  Client.cpp  GUI.hpp  ImageLoader.hpp  ImageLoaderException.hpp  MapRender.hpp  PlayerClientRemote.cpp  SDLGUI.cpp  player_client_remote.h
trunk/src/client/allegro/widgets/: allegrotruetypefont.hpp
trunk/src/client/sdl/: BuildingRender.cpp  Camera.cpp  SDLGUI.cpp  ToolRender.hpp
trunk/src/client/sdl/widgets/: MainMenu.hpp  StatusBar.cpp  StatusBar.hpp
trunk/src/client/widgets/: Toolbar.cpp  Toolbar.hpp
trunk/src/common/: Building.cpp  Building.hpp  BuildingFactory.cpp  BuildingFactory.hpp  BuildingHospital.cpp  BuildingHospital.hpp  BuildingInformation.cpp  BuildingInformation.hpp  BuildingManager.cpp  BuildingPolice.cpp  BuildingPolice.hpp  BuildingPowerplant.cpp  BuildingPowerplant.hpp  BuildingSpecial.hpp  PacketSender.cpp  PacketSender.hpp  PlayerManager.cpp  PlayerManager.hpp  shared.h
trunk/src/error/: elog.h
trunk/src/guis/allegro/: BuildingRender.cpp
trunk/src/guis/allegro/widgets/: allegrotruetypefont.cpp
trunk/src/guis/sdl/: BuildingRender.hpp  MapRender.cpp  MapRender.hpp  SDLGUI.cpp  SDLGUI.hpp  ToolRender.cpp
trunk/src/guis/sdl/widgets/: Console.cpp  MainMenu.cpp  MainMenu.hpp  MiniMap.cpp  MiniMap.hpp  Toolbar.cpp  Toolbar.hpp
trunk/src/server/: PlayerServerAI.cpp  PlayerServerAI.hpp  PlayerServerNetwork.hpp  Server.cpp
web/: index.html  style.css
wiki/: Building.wiki  DesignDocument.wiki  DesignDocumentBuildings.wiki  DesignDocumentCitySizes.wiki  DesignDocumentConcepts.wiki  DesignDocumentEconomy.wiki  DesignDocumentElectricity.wiki  DesignDocumentPolitics.wiki  DesignDocumentSummary.wiki  DesignDocumentZoneBuildings.wiki  Developing.wiki  Protocol.wiki  Roadmap.wiki  SaveGame.wiki  Sidebar.wiki  Simulty.wiki
(+26 files in other folders)
